--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,26 @@
+:root {
+  --color-bg-dark: #000000;
+  --color-bg-yellow: #f7d44c;
+  --color-bg-salmon: #eb7a53;
+  --color-bg-blue: #98b7db;
+  --color-bg-green: #a8d672;
+  --color-bg-cream: #f7ecc9;
+  --color-bg-white: #ffffff;
+  --color-text: #22243b;
+  --color-grey: #d1d1d1;
+}
+
+#root {
+  width: 100%;
+  height: 60%;
+  max-width: 500px;
+  background-color: var(--color-bg-white);
+  border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 30px 90px;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +28,20 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--color-grey);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+ul {
+  list-style: none;
+  padding-left: 0;
 }
