--- a/src/index.css
+++ b/src/index.css
@@ -11,13 +11,14 @@
 }
 
 #root {
+  display: flex;
+  flex-direction: column;
   width: 100%;
   height: 60%;
   max-width: 500px;
   background-color: var(--color-bg-white);
+  overflow: hidden;
   border-radius: 1rem;
-  display: flex;
-  flex-direction: column;
   box-shadow: rgba(0, 0, 0, 0.4) 0px 30px 90px;
 }
 
@@ -44,4 +45,9 @@ code {
 ul {
   list-style: none;
   padding-left: 0;
+}
+
+button {
+  outline: none;
+  border: none;
 }
