--- a/src/components/Todo/Todo.module.css
+++ b/src/components/Todo/Todo.module.css
@@ -21,13 +21,13 @@
 .icon {
   width: 26px;
   height: 26px;
-  background-color: var(--color-grey);
+  background-color: var(--color-bg-sub);
   border-radius: 100%;
   transition: all 150ms ease-out;
 }
 
 .icon:hover {
-  background-color: var(--color-accent);
+  background-color: var(--color-grey);
   transform: rotate(15deg) scale(1.2);
 }
 
