--- a/src/components/AddTodo/AddTodo.module.css
+++ b/src/components/AddTodo/AddTodo.module.css
@@ -2,7 +2,7 @@
   width: 100%;
   display: flex;
   padding: 1.4rem 1rem;
-  background-color: var(--color-grey-light);
+  background-color: var(--color-bg-sub);
 }
 
 .input {
@@ -16,7 +16,7 @@
 }
 
 .button {
-  background-color: var(--color-grey);
+  background-color: var(--color-accent);
   color: var(--color-bg-dark);
   font-size: 1.4rem;
   font-weight: bold;
@@ -24,8 +24,9 @@
   border-top-right-radius: 8px;
   border-bottom-right-radius: 8px;
   cursor: pointer;
+  border-left: 1px solid var(--color-bg-sub);
 }
 
 .button:hover {
-  filter: brightness(125%);
+  filter: brightness(93%);
 }
