--- a/src/components/TodoList/TodoList.module.css
+++ b/src/components/TodoList/TodoList.module.css
@@ -3,7 +3,7 @@
   min-height: 0;
   display: flex;
   flex-direction: column;
-  background-color: var(--color-bg-white);
+  background-color: var(--color-bg-main);
 }
 
 .list {
