--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,25 @@
 :root {
-  --color-bg-dark: #000000;
-  --color-bg-yellow: #f7d44c;
-  --color-bg-salmon: #eb7a53;
-  --color-bg-blue: #98b7db;
-  --color-bg-green: #a8d672;
-  --color-bg-cream: #f7ecc9;
-  --color-bg-white: #ffffff;
+  --color-bg-main: #ffffff;
+  --color-bg-sub: #d1d1d1;
+  --color-accent: #8d96ad;
   --color-text: #22243b;
-  --color-grey: #d1d1d1;
-  --color-grey-light: #f5f4f4;
-  --color-grey-dark: #6c6c6c;
-  --color-accent: #ef8cac;
+  --color-active: #a8d672;
+  --color-completed: #98b7db;
+
+  --color-grey: #9d9a9a;
+
+  --color-yellow: #f7d44c;
+
   --color-scrollbar: #aaa7a7;
+}
+
+html.dark {
+  --color-bg-main: #000000;
+  --color-bg-sub: #000000;
+  --color-accent: #eafef6;
+  --color-text: #ffffff;
+  --color-active: #f7d44c;
+  --color-completed: #eb7a53;
 }
 
 #root {
@@ -20,7 +28,7 @@
   width: 100%;
   height: 60%;
   max-width: 500px;
-  background-color: var(--color-bg-white);
+  background-color: var(--color-bg-main);
   overflow: hidden;
   border-radius: 1rem;
   box-shadow: 0 20px 50px rgba(18, 18, 19, 0.7);
@@ -66,7 +74,7 @@ button {
   width: 0.5rem;
 }
 ::-webkit-scrollbar-track {
-  background-color: var(--color-grey);
+  background-color: var(--color-bg-main);
 }
 
 ::-webkit-scrollbar-thumb {
@@ -74,5 +82,5 @@ button {
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: var(--color-grey-dark);
+  background-color: var(--color-accent);
 }
