--- a/src/components/Todo/Todo.module.css
+++ b/src/components/Todo/Todo.module.css
@@ -3,8 +3,18 @@
   justify-content: space-between;
   align-items: center;
   padding: 0.5rem 1rem;
-  margin: 0.1rem 0;
+  margin: 0.1rem 1rem;
+  border-radius: 1rem;
   color: var(--color-text);
+}
+
+.todo.completed {
+  background-color: var(--color-completed);
+  text-decoration: line-through;
+}
+
+.todo.active {
+  background-color: var(--color-active);
 }
 
 .checkbox {
