--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -52,3 +52,18 @@
   margin-top: 0.2rem;
   border: 1px solid var(--color-text);
 }
+
+@media screen and (max-width: 768px) {
+  .icon {
+    margin:0 0.6rem;
+    padding:0.4rem;
+  }
+
+  .darkModeBtn {
+    font-size: 1rem;
+  }
+
+  .filter {
+    font-size: 1rem;
+  }
+}
