--- a/src/index.css
+++ b/src/index.css
@@ -84,3 +84,9 @@ button {
 ::-webkit-scrollbar-thumb:hover {
   background-color: var(--color-accent);
 }
+
+@media screen and (max-width: 768px) {
+  #root {
+    max-width: 300px;
+  }
+}
